# trailproof

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  cliff.toml
.claude/: settings.json
.claude/agents/: parallel-build.md  parallel-mirror.md  review-agent.md
.claude/commands/: build.md  commit.md  decision.md  plan.md  release.md  review.md
.claude/plans/: cicd-release-flow.md  core-api.md
.claude/skills/: mintlify-docs.md
.claude/specs/: cicd-release-flow.md  core-api.md
.claude/templates/: plan.md
.githooks/: pre-commit
.github/workflows/: ci.yml  publish-npm.yml  publish-python.yml
docs/: docs.json  introduction.mdx  quickstart.mdx  style.css
docs/api-reference/: config.mdx  errors.mdx  models.mdx  overview.mdx  trailproof-class.mdx
docs/concepts/: canonical-json.mdx  event-envelope.mdx  hash-chain.mdx
docs/guides/: hmac-signing.mdx  jsonl-store.mdx  typescript-sdk.mdx  verification.mdx
fixtures/: test-vectors.json
python/: CLAUDE.md  Makefile  pyproject.toml
python/src/trailproof/: __init__.py  chain.py  errors.py  signer.py  trailproof.py  types.py
python/src/trailproof/stores/: base.py  jsonl.py  memory.py
python/tests/: test_chain.py  test_errors.py  test_jsonl_store.py  test_query.py  test_signer.py  test_stores.py  test_trailproof.py  test_types.py  test_vectors.py  test_verify.py
typescript/: CLAUDE.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
typescript/src/: chain.ts  errors.ts  index.ts  signer.ts  trailproof.ts  types.ts
typescript/tests/: chain.test.ts  errors.test.ts  (+9 more)
(+8 files in other folders)
